# namunify

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
namunify/: __init__.py  cli.py  config.py  state.py
namunify/core/: __init__.py  analyzer.py  generator.py  parser.py  webcrack.py
namunify/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
namunify/plugins/: __init__.py  base.py  beautify.py
scripts/: beautify.mjs  generate.mjs  js_parser.mjs  uniquify_bindings.mjs
tests/: __init__.py  conftest.py  test_analyzer.py  test_cli_context.py  test_cli_pipeline.py  test_generator.py  test_llm.py  test_parser.py
tests/fixtures/: obfuscated_sample.js  webpack_bundle.min.js
